--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -13,6 +13,11 @@
   .card
     width: 230px
     height: 230px      
+  .footer
+    &__contact
+      &-form 
+        grid-column: span 3
+    
 
 @media ( max-width: 992px )
   .container, .newsletter-wrapper
@@ -98,11 +103,39 @@
     &-wrapper
       flex-wrap: wrap
     &__card
-      margin-bottom: 20px  
+      margin-bottom: 20px
   .card
     width: 340px
-    height: 255px     
-
+    height: 255px
+  .footer
+    &-wrapper
+      grid-template-columns: repeat(6, 1fr)
+      grid-row-gap: 40px 
+    &__input
+      flex-basis: 100%
+    &__logo
+      grid-row: 1 / 2
+      grid-column: span 2  
+      
+    &__social
+      &-network
+        grid-row: 1 / 2
+        grid-column: span 4
+        align-self: center
+    &__categories
+      grid-row: 2 / 3    
+      grid-column: span 2
+    &__legal
+      grid-column: span 2  
+    &__additional
+      grid-column: span 2   
+    &__contact
+      &-details
+        grid-column: span 5
+        grid-row: 3
+      &-form
+        grid-column: span 5
+        grid-row: 4    
 
 @media ( max-width: 767px )
   .container
@@ -187,10 +220,17 @@
         padding: 0px
   .activities
     padding-top: 40px
-    padding-bottom: 60px      
+    padding-bottom: 60px
   .card
     width: 49%
-    height: 255px       
+    height: 255px
+  .footer
+    &__input
+      flex-basis: 49%  
+    &__contact
+      &-form 
+        grid-column: span 6  
+    
 @media ( max-width: 576px )
   .logo
     width: 99px
@@ -214,7 +254,34 @@
       justify-content: space-evenly
   .card
     width: 70%
-    
+  .footer
+    &__input
+      flex-basis: 100%
+    &-wrapper
+      grid-template-columns: 1fr 
+    &__logo
+      grid-row: 1
+      grid-column: 1
+    &__social
+      &-network
+        grid-row: 2
+        grid-column: 1
+    &__additional
+      grid-row: 3
+      grid-column: 1
+    &__categories
+      grid-row: 4
+      grid-column: 1   
+    &__legal
+      grid-row: 5
+      grid-column: 1
+    &__contact
+      &-details
+        grid-row: 6
+        grid-column: 1 
+      &-form  
+        grid-row: 7
+        grid-column: 1             
 
 @media ( max-width: 501px )
   .hotel
@@ -225,11 +292,15 @@
     &-description
       width: 67%
   .card
-    width: 100%    
+    width: 100%
 @media ( max-width: 375px )
   .hotel
     &-description
       width: 80%
+  .footer
+    &__contact
+      &-form
+        max-width: 300px    
 @media ( max-width: 320px )
   .container
     max-width: 576px
@@ -310,13 +381,29 @@
     padding-top: 0px
     &__title
       font-size: 18px
-      line-height: 23px 
-      margin-bottom: 36px 
+      line-height: 23px
+      margin-bottom: 36px
     &__card
-      margin-bottom: 20px  
+      margin-bottom: 20px
   .reviews
-    padding-bottom: 9px      
+    padding-bottom: 9px
   .card
-    width: 100% 
+    width: 100%
     &__title
-      max-width: 145px   
+      max-width: 145px
+  .footer
+    &__contact
+      &-form
+        max-width: 281px
+        position: relative
+    &__info
+      position: absolute
+      margin-top: 200px
+    &__message
+      margin-bottom: 45px 
+    &__social
+      &-network
+        flex-wrap: wrap
+    &__title
+      &--inline  
+        margin-bottom: 20px     
