--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,40 @@ img {
   max-width: 100%;
 }
 
+.input {
+  background-color: #fff;
+  border-radius: 4px;
+  border: none;
+  padding: 0px 23px;
+  height: 50px;
+}
+
+.message {
+  background-color: #fff;
+  border-radius: 4px;
+  padding: 18px 23px;
+  border: none;
+}
+
+.button {
+  min-width: 160px;
+  min-height: 50px;
+  padding: 18px;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 12px;
+  line-height: 15px;
+  color: #fff;
+  background-color: #EC1F46;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.homepage__button {
+  margin-top: 20px;
+}
+
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 /* Document
    ========================================================================== */
@@ -457,6 +491,7 @@ template {
   border: none;
   background-color: #EC1F46;
   padding-top: 6px;
+  cursor: pointer;
 }
 
 .user {
@@ -931,6 +966,7 @@ template {
   font-weight: 700;
   font-size: 12px;
   line-height: 15px;
+  cursor: pointer;
 }
 
 .reviews {
@@ -1203,6 +1239,7 @@ template {
   -ms-flex-item-align: center;
       -ms-grid-row-align: center;
       align-self: center;
+  cursor: pointer;
 }
 
 .footer__categories {
@@ -1318,11 +1355,6 @@ template {
 }
 
 .footer__input {
-  background-color: #fff;
-  border-radius: 4px;
-  border: none;
-  padding: 0px 23px;
-  height: 50px;
   margin-bottom: 15px;
   -ms-flex-preferred-size: 49%;
       flex-basis: 49%;
@@ -1404,20 +1436,6 @@ template {
   color: #BDBDBD;
 }
 
-.footer__button {
-  min-width: 160px;
-  min-height: 50px;
-  padding: 18px;
-  font-style: normal;
-  font-weight: 700;
-  font-size: 12px;
-  line-height: 15px;
-  color: #fff;
-  background-color: #EC1F46;
-  border: none;
-  border-radius: 4px;
-}
-
 .footer__info {
   font-style: normal;
   font-weight: 700;
@@ -1429,6 +1447,101 @@ template {
 .footer__tel {
   text-decoration: none;
   color: inherit;
+}
+
+.modal__overlay {
+  position: fixed;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  background-color: rgba(0, 143, 223, 0.39);
+  z-index: 100;
+  visibility: hidden;
+  opacity: 0;
+  -webkit-transition: opacity 0.2s;
+  transition: opacity 0.2s;
+}
+
+.modal__overlay--visible {
+  visibility: visible;
+  opacity: 1;
+}
+
+.modal__title {
+  font-style: normal;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 23px;
+  text-align: center;
+  margin: 0px 0px 15px 0px;
+  text-transform: uppercase;
+}
+
+.modal__dialog {
+  position: fixed;
+  left: 50%;
+  top: 50%;
+  max-width: 478px;
+  padding: 33px 88px;
+  background-color: #0A223D;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  color: #fff;
+  border-radius: 8px;
+  z-index: 101;
+  visibility: hidden;
+  opacity: 0;
+  -webkit-transition: opacity 0.2s;
+  transition: opacity 0.2s;
+}
+
+.modal__dialog--visible {
+  visibility: visible;
+  opacity: 1;
+  max-height: 95%;
+  overflow-y: scroll;
+}
+
+.modal__close {
+  position: absolute;
+  right: 18px;
+  top: 17px;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.modal__input {
+  width: 100%;
+  margin-bottom: 15px;
+}
+
+.modal__message {
+  width: 100%;
+  min-height: 123px;
+  margin-bottom: 15px;
+}
+
+.modal__form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.modal__info {
+  font-style: normal;
+  font-weight: 700;
+  font-size: 12px;
+  line-height: 15px;
+  color: #BDBDBD;
 }
 
 @media (max-width: 1200px) {
@@ -1464,6 +1577,10 @@ template {
 @media (max-width: 992px) {
   .container, .newsletter-wrapper {
     max-width: 700px;
+  }
+  .modal__dialog {
+    width: 90%;
+    padding: 33px 80px;
   }
   .logo {
     width: 132px;
@@ -1634,6 +1751,10 @@ template {
   .container {
     max-width: 700px;
     width: 92%;
+  }
+  .modal__dialog {
+    width: 90%;
+    padding: 33px 70px;
   }
   .navbar--mobile_fixed {
     position: fixed;
@@ -1917,6 +2038,10 @@ template {
   .hotel-description {
     width: 55%;
   }
+  .modal__dialog {
+    width: 90%;
+    padding: 33px 40px;
+  }
 }
 
 @media (max-width: 456px) {
@@ -2077,6 +2202,10 @@ template {
   }
   .footer__title--inline {
     margin-bottom: 20px;
+  }
+  .modal__dialog {
+    width: 90%;
+    padding: 33px 16px;
   }
 }
 /*# sourceMappingURL=style.css.map */
