--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -26,6 +26,10 @@
 @media ( max-width: 992px )
   .container, .newsletter-wrapper
     max-width: 700px
+  .modal
+    &__dialog
+      width: 90%
+      padding: 33px 80px     
   .logo
     width: 132px
   .navbar
@@ -148,6 +152,10 @@
   .container
     max-width: 700px
     width: 92%
+  .modal
+    &__dialog
+      width: 90%
+      padding: 33px 70px   
   .navbar
     &--mobile
       &_fixed
@@ -339,6 +347,10 @@
   .hotel
     &-description
       width: 55%
+  .modal
+    &__dialog
+      width: 90%
+      padding: 33px 40px      
 @media ( max-width: 456px )
   .navbar
     &-menu
@@ -465,3 +477,7 @@
     &__title
       &--inline
         margin-bottom: 20px
+  .modal
+    &__dialog
+      width: 90%
+      padding: 33px 16px   
