--- a/sass/blocks/_footer.sass
+++ b/sass/blocks/_footer.sass
@@ -13,6 +13,7 @@
     width: 166px
     grid-row: 1 / 3
     align-self: center
+    cursor: pointer
   &__categories
     grid-row: 1 / 4
   &__social
@@ -74,11 +75,6 @@
     text-decoration: none
     color: inherit  
   &__input
-    background-color: #fff  
-    border-radius: 4px
-    border: none
-    padding: 0px 23px
-    height: 50px
     margin-bottom: 15px
     flex-basis: 49%
     &::placeholder
@@ -102,18 +98,7 @@
       font-size: 12px
       line-height: 15px
       color: #BDBDBD
-  &__button
-    min-width: 160px
-    min-height: 50px
-    padding: 18px
-    font-style: normal
-    font-weight: 700
-    font-size: 12px
-    line-height: 15px  
-    color: $light
-    background-color: $primary
-    border: none
-    border-radius: 4px
+
   &__info
     font-style: normal
     font-weight: 700
