--- a/sass/blocks/_header.sass
+++ b/sass/blocks/_header.sass
@@ -61,6 +61,7 @@
     border: none
     background-color: $primary
     padding-top: 6px
+    cursor: pointer
 .user
   display: flex
   align-items: center
